@@ -17,3 +17,5 @@ Don't update scores for the first instance.
 Force attempt all values till count 5 in parameters
 --- 28 dec full ---
 New branching rule. 
+EXP: always provide solution.
+EXP: Keep cuts.
